--- a/src/app/paises/pages/selector-page/selector-page.component.html
+++ b/src/app/paises/pages/selector-page/selector-page.component.html
@@ -17,18 +17,39 @@
     </div>
 
     <!-- Region -->
-    <div class="row mb-3">
+    <div class="row mb-3" *ngIf="paises.length > 0">
         <div class="col">
             <label class="form-label">País:</label>
             <select class="form-control"
                     formControlName="pais">
                 <option value=""> -- Seleccione un País -- </option>
                 <option *ngFor="let pais of paises"
-                        [value]="pais.name.common | lowercase"> {{ pais.name.common }} </option>
+                        [value]="pais.cca3 | lowercase"> {{ pais.name.common }} </option>
+            </select>
+        </div>
+    </div>
+
+    <!-- Frontera -->
+    <div class="row mb-3" *ngIf="fronteras.length > 0">
+        <div class="col">
+            <label class="form-label">Fronteras:</label>
+            <select class="form-control"
+                    formControlName="frontera">
+                <option value=""> -- Seleccione el país fronterizo -- </option>
+                <option *ngFor="let frontera of fronteras"
+                        [value]="frontera.cca3"> {{ frontera.name.common }} </option>
             </select>
         </div>
     </div>
     
+    <div class="row" *ngIf="cargando">
+        <div class="col">
+            <div class="alert alert-primary">
+                Cargando..
+            </div>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col">
             <button class="btn btn-primary float-end"
